@@ -28,20 +28,11 @@ VERSION = "@VERSION@"
 APPNAME = _("glChess")
 
 COPYRIGHT     = _('Copyright 2005-2007 Robert Ancell (and contributors)')
-DESCRIPTION   = _('A 2D/3D chess interface for Gnome')
+DESCRIPTION   = _('A 2D/3D chess interface for GNOME')
 WEBSITE       = 'http://glchess.sourceforge.net'
 WEBSITE_LABEL = _('glChess homepage')
 AUTHORS       = ['Robert Ancell <bob27@users.sourceforge.net>']
 ARTISTS       = ['John-Paul Gignac (3D Models)', 'Max Froumentin (2D Models)', 'Hylke Bons <h.bons@student.rug.nl> (icon)']
-TRANSLATORS   = [u"Luca Marturana <lucamarturana@gmail.com> (It)",
-                 u"Hakan Bekdas <hakanbekdas@yahoo.com> (tr)",
-                 u"A S Alam <apbrar@gmail.com> (pa)",
-                 u"Michał Bentkowski <mr.ecik@mail.com> (pl)",
-                 u"Daniel Nylander <po@danielnylander.se> (sv)",
-                 u"Zoraks <skatala4ever@gmail.com> (ca)",
-                 u"Elxan İsmayılov <elxan.i@gmail.com> (az)",
-                 u"Translators on Rosetta (launchpad.net)",
-                 u"Gnome Translation Team"]
 
 # The GPL license string will be translated, and the game name inserted.
 # This license is the same as in libgames-support/games-stock.c 
