@@ -1,3 +1,10 @@
+2007-05-15  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/lib/defaults.py.in:
+	* src/lib/gtkui/gtkui.py: Fix spelling of GNOME, and get
+	translation credits from translation instead of hardcoding it.
+	This is consistent with GNOME practices and the other gnome-games.
+
 2007-04-29  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Set more configuration defaults in case schema is missing (Bug #434097)
